0.33_dev
-refactor mouse positioning.
-add mouse get_focused method.

0.33    2025-01-18
-revise surface alpha.
-update transform to preserve surface alpha.
-add vector copy method.
-revise mixer set_num_channels method.
-refactor mixer music rewind method.
-revise surface convert.
-add activeevent.
-add closeevent.
-update color object.
-revise sprite to optimize.
-revise vector elementwise object.
-revise vector operator methods.
-revise vector object instantiation.

0.32    2022-04-17
-add key set_repeat method.
-update surface blit with optional rect return.
-revise time tick framerate handling.
-add surface convert methods.
-add surface alpha methods.
-add surface blits method.

0.31    2021-11-07
-revise sprite orderedupdates.
-add sprite group alias.
-refactor sprite collide methods.
-add sprite layeredupdates.
-add cursors get_cursor_types.
-add vector object.
-revise mixer processing.
-add mixer music object.
-add hscroll mouseevent.
-add mixer channel endevent.
-add mixer channel queue.

0.30    2021-04-28
-center display frame.
-revise rect move and union methods.
-revise rect attributes.
-revise rect move/inflate args processing.
-add env check.
-revise quit method to stop timers.
-update time set_timer for event argument.
-update for python 2/3 compatibility.

0.29    2021-04-06
-update event handling.
-update exception handling of color object.
-update mixer endian setting.
-update subsurface exception.
-update for python 2/3 compatibility.

0.28    2019-04-06
-update jpanel with event handling that registers appropriate mouse position.
-add time set_timer method.
-update display repaint to sync with program iteration.
-update sprite to revise member groups.
-update sprite argument handling.
-update sprite collide_mask to use mask.overlap.
-add mouse set_cursor and get_cursor methods.
-update mouse set_cursor to use custom image.
-update mouse set_cursor to use cursor data.
-update transform rotozoom to optimize.
-update surface area blit to optimize.